fix scaling issue on mobile

--- a/app/styles/progressbar.css
+++ b/app/styles/progressbar.css
@@ -21,6 +21,6 @@
     align-items:flex-start;
   }
   .progressbar{
-    width:100%;
+    width:90%;
   }
 }
