--- a/app/styles/utils.css
+++ b/app/styles/utils.css
@@ -83,6 +83,6 @@
 
 @media (max-width: 560px) {
   .p-5 {
-    padding: 4em 2em;
+    padding: 4em 1.5em;
   }
 }
